--- a/contact.html
+++ b/contact.html
@@ -8,53 +8,43 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./Css/style.css">
-    <title>Home Page</title>
+    <title>Contact Page</title>
 </head>
 
 <body>
     <header class="bg-body-secondary">
 
-        <div class="d-flex justify-content-around align-items-center">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <img class="img-fluid pt-2 pb-2 ps-1" src="./Imagenes/amazing_brand.png" alt="Amazing Events">
-            </div>
-
-            <div class="container-fluid d-none d-xl-inline">
-                <nav class="nav nav-pills  fs-5 ">
-                    <a class="flex-sm-fill text-sm-center nav-link  me-2 ms-2 " aria-current="page" href="./index.html">HOME</a>
-                    <a class="flex-sm-fill text-sm-center nav-link me-2 ms-2" href="./upcomingEvents.html">UPCOMING
-                        EVENTS</a>
-                    <a class="flex-sm-fill text-sm-center nav-link me-2 ms-2" href="./pastEvents.html">PAST EVENTS</a>
-                    <a class="flex-sm-fill text-sm-center nav-link active me-2 ms-2" href="#">CONTACT</a>
-                    <a class="flex-sm-fill text-sm-center nav-link me-2 ms-2" href="./stats.html">STATS</a>
-
-                </nav>
-            </div>
-
-            <div class="d-flex justify-content-end align-items-center">
-
-                <nav class="navbar d-xl-none d-md-inline d-sm-inline ">
-                    <div class="container-fluid">
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
+                <a class="navbar-brand" href="./index.html">
+                    <img class="img-fluid logo" src="./Imagenes/amazing_brand.png" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar"
+                    aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                        <a class="navbar-brand" href="./index.html">
+                            <img class="img-fluid logo w-75" src="./Imagenes/amazing_brand.png" alt="logo">
+                        </a>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
-                </nav>
-                <div class="collapse" id="navbarToggleExternalContent">
-                    <div class="bg-body-secondary fs-6">
-                        <a class="nav-link  p-2 m-1 text-white text-center rounded-pill " href="./index.html">HOME</a>
-                        <a class="nav-link  p-2 m-1  text-center rounded-pill" href="./upcomingEvents.html">UPCOMING
-                            EVENTS</a>
-                        <a class="nav-link  p-2 m-1  text-center rounded-pill" href="./pastEvents.html">PAST EVENTS</a>
-                        <a class="nav-link bg-primary p-2 m-1  text-center rounded-pill" href="#">CONTACT</a>
-                        <a class="nav-link  p-2 m-1 text-center rounded-pill" href="./stats.html">STATS</a>
-
+                    <div class="offcanvas-body justify-content-end" id="navbarTogglerDemo02">
+                        <a class="p-2 ps-4 pe-4 m-1 rounded-5 fw-bold navbar-brand text-xl-center nav-link"
+                            aria-current="page" href="./index.html">HOME</a>
+                        <a class="p-2 ps-4 pe-4 m-1 text-xl-center nav-link rounded-5 fw-bold navbar-brand"
+                            href="./upcomingEvents.html">UPCOMING EVENTS</a>
+                        <a class="p-2 ps-4 pe-4 m-1 text-xl-center nav-link rounded-5 fw-bold navbar-brand"
+                            href="./pastEvents.html">PAST EVENTS</a>
+                        <a class="p-2 ps-4 pe-4 m-1 bg-primary text-white  text-xl-center nav-link rounded-5 fw-bold navbar-brand"
+                            href="#">CONTACT</a>
+                        <a class="p-2 ps-4 pe-4 m-1 text-xl-center nav-link rounded-5 fw-bold navbar-brand"
+                            href="./stats.html">STATS</a>
                     </div>
                 </div>
-            </div>
-        </div>
+        </nav>
 
 
     </header>
@@ -65,42 +55,72 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active div-container">
                         <img src="./Imagenes/optional_banner_2.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption text-center bg-light text-black rounded-5"
-                            style="--bs-bg-opacity: .5;">
-                            <h1 class="display-1">CONTACT US</h1>
-                            <p class="fs-4">For more information leave your information</p>
+                        <div class="carousel-caption  div-h1-p d-flex justify-content-center align-items-center">
+                            <div class="text-center bg-light text-black rounded-5 p-3 ps-5 pe-5"
+                                style="--bs-bg-opacity: .7;">
+                                <h1 class="display-1 fw-bold  fst-italic">CONTACT US</h1>
+                                <p class="fs-6 d-xl-none fw-bold fst-italic">For more information leave your information
+                                </p>
+                                <p class="fs-4 d-none d-xl-block fw-bold fst-italic">For more information leave your
+                                    information</p>
+                            </div>
+
                         </div>
                     </div>
                     <div class="carousel-item div-container">
                         <img src="./Imagenes/optional_banner_5.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption text-center bg-light text-black rounded-5"
-                            style="--bs-bg-opacity: .5;">
-                            <h1 class="display-1">CONTACT US</h1>
-                            <p class="fs-4">For more information leave your information</p>
+                        <div class="carousel-caption  div-h1-p d-flex justify-content-center align-items-center">
+                            <div class="text-center bg-light text-black rounded-5 p-3 ps-5 pe-5"
+                                style="--bs-bg-opacity: .7;">
+                                <h1 class="display-1 fw-bold  fst-italic">CONTACT US</h1>
+                                <p class="fs-6 d-xl-none fw-bold fst-italic">For more information leave your information
+                                </p>
+                                <p class="fs-4 d-none d-xl-block fw-bold fst-italic">For more information leave your
+                                    information</p>
+                            </div>
+
                         </div>
                     </div>
                     <div class="carousel-item div-container">
                         <img src="./Imagenes/optional_banner_3.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption text-center bg-light text-black rounded-5"
-                            style="--bs-bg-opacity: .5;">
-                            <h1 class="display-1">CONTACT US</h1>
-                            <p class="fs-4">For more information leave your information</p>
+                        <div class="carousel-caption  div-h1-p d-flex justify-content-center align-items-center">
+                            <div class="text-center bg-light text-black rounded-5 p-3 ps-5 pe-5"
+                                style="--bs-bg-opacity: .7;">
+                                <h1 class="display-1 fw-bold  fst-italic">CONTACT US</h1>
+                                <p class="fs-6 d-xl-none fw-bold fst-italic">For more information leave your information
+                                </p>
+                                <p class="fs-4 d-none d-xl-block fw-bold fst-italic">For more information leave your
+                                    information</p>
+                            </div>
+
                         </div>
                     </div>
                     <div class="carousel-item div-container">
                         <img src="./Imagenes/optional_banner_1.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption text-center bg-light text-black rounded-5"
-                            style="--bs-bg-opacity: .5;">
-                            <h1 class="display-1">CONTACT US</h1>
-                            <p class="fs-4">For more information leave your information</p>
+                        <div class="carousel-caption  div-h1-p d-flex justify-content-center align-items-center">
+                            <div class="text-center bg-light text-black rounded-5 p-3 ps-5 pe-5"
+                                style="--bs-bg-opacity: .7;">
+                                <h1 class="display-1 fw-bold  fst-italic">CONTACT US</h1>
+                                <p class="fs-6 d-xl-none fw-bold fst-italic">For more information leave your information
+                                </p>
+                                <p class="fs-4 d-none d-xl-block fw-bold fst-italic">For more information leave your
+                                    information</p>
+                            </div>
+
                         </div>
                     </div>
                     <div class="carousel-item div-container">
                         <img src="./Imagenes/optional_banner_4.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption text-center bg-light text-black rounded-5"
-                            style="--bs-bg-opacity: .5;">
-                            <h1 class="display-1">CONTACT US</h1>
-                            <p class="fs-4">For more information leave your information</p>
+                        <div class="carousel-caption  div-h1-p d-flex justify-content-center align-items-center">
+                            <div class="text-center bg-light text-black rounded-5 p-3 ps-5 pe-5"
+                                style="--bs-bg-opacity: .7;">
+                                <h1 class="display-1 fw-bold  fst-italic">CONTACT US</h1>
+                                <p class="fs-6 d-xl-none fw-bold fst-italic">For more information leave your information
+                                </p>
+                                <p class="fs-4 d-none d-xl-block fw-bold fst-italic">For more information leave your
+                                    information</p>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -131,7 +151,8 @@
                 </div>
                 <div class="mb-3">
                     <label for="exampleFormControlTextarea1" class="form-label">Message:</label>
-                    <textarea class="form-control border-primary fs-5" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    <textarea class="form-control border-primary fs-5" id="exampleFormControlTextarea1"
+                        rows="3"></textarea>
                 </div>
                 <div class="d-flex justify-content-end">
                     <button class="btn btn-outline-primary search " type="submit">Submit</button>
