--- a/details.html
+++ b/details.html
@@ -8,86 +8,77 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./Css/style.css">
-    <title>Home Page</title>
+    <title>Details Page</title>
 </head>
 
 <body>
     <header class="bg-body-secondary">
 
-        <div class="d-flex justify-content-around align-items-center">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <img class="img-fluid pt-2 pb-2 ps-1" src="./Imagenes/amazing_brand.png" alt="Amazing Events">
-            </div>
-
-            <div class="container-fluid d-none d-xl-inline">
-                <nav class="nav nav-pills  fs-5 ">
-                    <a class="flex-sm-fill text-sm-center nav-link  me-2 ms-2 " aria-current="page"
-                        href="./index.html">HOME</a>
-                    <a class="flex-sm-fill text-sm-center nav-link me-2 ms-2" href="./upcomingEvents.html">UPCOMING
-                        EVENTS</a>
-                    <a class="flex-sm-fill text-sm-center nav-link me-2 ms-2" href="./pastEvents.html">PAST EVENTS</a>
-                    <a class="flex-sm-fill text-sm-center nav-link  me-2 ms-2" href="./contact.html">CONTACT</a>
-                    <a class="flex-sm-fill text-sm-center nav-link  me-2 ms-2" href="./stats.html">STATS</a>
-
-                </nav>
-            </div>
-
-            <div class="d-flex justify-content-end align-items-center">
-
-                <nav class="navbar d-xl-none d-md-inline d-sm-inline ">
-                    <div class="container-fluid">
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
+                <a class="navbar-brand" href="./index.html">
+                    <img class="img-fluid logo" src="./Imagenes/amazing_brand.png" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar"
+                    aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                        <a class="navbar-brand" href="./index.html">
+                            <img class="img-fluid logo w-75" src="./Imagenes/amazing_brand.png" alt="logo">
+                        </a>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
-                </nav>
-                <div class="collapse" id="navbarToggleExternalContent">
-                    <div class="bg-body-secondary fs-6">
-                        <a class="nav-link  p-2 m-1 text-white text-center rounded-pill " href="./index.html">HOME</a>
-                        <a class="nav-link  p-2 m-1  text-center rounded-pill" href="./upcomingEvents.html">UPCOMING
-                            EVENTS</a>
-                        <a class="nav-link  p-2 m-1  text-center rounded-pill" href="./pastEvents.html">PAST EVENTS</a>
-                        <a class="nav-link  p-2 m-1  text-center rounded-pill" href="./contact.html">CONTACT</a>
-                        <a class="nav-link  p-2 m-1 text-center rounded-pill" href="./stats.html">STATS</a>
-
+                    <div class="offcanvas-body justify-content-end" id="navbarTogglerDemo02">
+                        <a class="p-2 ps-4 pe-4 m-1  rounded-5 fw-bold navbar-brand text-xl-center nav-link"
+                            aria-current="page" href="./index.html">HOME</a>
+                        <a class="p-2 ps-4 pe-4 m-1 text-xl-center nav-link rounded-5 fw-bold navbar-brand"
+                            href="./upcomingEvents.html">UPCOMING EVENTS</a>
+                        <a class="p-2 ps-4 pe-4 m-1  text-xl-center nav-link rounded-5 fw-bold navbar-brand"
+                            href="./pastEvents.html">PAST EVENTS</a>
+                        <a class="p-2 ps-4 pe-4 m-1 text-xl-center nav-link rounded-5 fw-bold navbar-brand"
+                            href="./contact.html">CONTACT</a>
+                        <a class="p-2 ps-4 pe-4 m-1 text-xl-center nav-link rounded-5 fw-bold navbar-brand"
+                            href="./stats.html">STATS</a>
                     </div>
                 </div>
-            </div>
-        </div>
-
+        </nav>
 
     </header>
 
     <main>
+        <div class="div-tarjeta d-sm-none d-xl-flex align-items-center ">
+            <div class="pt-2 d-flex justify-content-center ">
+                <div class="card d-none d-xl-block m-5 tarjeta border-primary border-3 rounded-5 w-75 ">
 
-        <div class="card mt-5 d-none d-xl-block">
+                    <div class=" g-0  d-flex align-items-center justify-content-evenly">
+                        <div class="col-md-5 border ms-5 mt-5 mb-5">
+                            <img src="./Imagenes/food_fair.jpg" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-5 border border-primary border-2 ms-5 mt-5 mb-5 bg-light bg-gradient">
+                            <div class="card-body">
+                                <h5 class="card-title display-6 fw-bold">Festival of the collectivities</h5>
+                                <h5 class="card-title d-inline ">Date:</h5>
+                                <p class="card-text d-inline"> 2022-12-12</p> <br>
 
-            <div class="row g-0 d-flex justify-content-center align-items-center ">
-                <div class="col-md-5 border ms-5 mt-5 mb-5">
-                    <img src="./Imagenes/food_fair.jpg" class="img-fluid rounded-start" alt="...">
-                </div>
-                <div class="col-md-5 border border-primary border-4 ms-5 mt-5 mb-5 w-25 bg-light bg-gradient">
-                    <div class="card-body">
-                        <h5 class="card-title display-6 fw-bold">Festival of the collectivities</h5>
-                        <h5 class="card-title d-inline ">Date:</h5>
-                        <p class="card-text d-inline"> 2022-12-12</p> <br>
+                                <h5 class="card-title d-inline">Description:</h5>
 
-                        <h5 class="card-title d-inline">Description:</h5>
-
-                        <p class="card-text d-inline">Enjoy your favorite dishes from different countries in a
-                            unique event for the whole family.</p> <br>
-                        <h5 class="card-title d-inline">Category:</h5>
-                        <p class="card-text d-inline"> Food Fair</p> <br>
-                        <h5 class="card-title d-inline">Place:</h5>
-                        <p class="card-text d-inline"> Room A</p> <br>
-                        <h5 class="card-title d-inline">Capacity:</h5>
-                        <p class="card-text d-inline"> 45000</p> <br>
-                        <h5 class="card-title d-inline">Assistance:</h5>
-                        <p class="card-text d-inline"> 42756</p> <br>
-                        <h5 class="card-title d-inline">Price:</h5>
-                        <p class="card-text d-inline"> $5</p>
+                                <p class="card-text d-inline">Enjoy your favorite dishes from different countries in a
+                                    unique event for the whole family.</p> <br>
+                                <h5 class="card-title d-inline">Category:</h5>
+                                <p class="card-text d-inline"> Food Fair</p> <br>
+                                <h5 class="card-title d-inline">Place:</h5>
+                                <p class="card-text d-inline"> Room A</p> <br>
+                                <h5 class="card-title d-inline">Capacity:</h5>
+                                <p class="card-text d-inline"> 45000</p> <br>
+                                <h5 class="card-title d-inline">Assistance:</h5>
+                                <p class="card-text d-inline"> 42756</p> <br>
+                                <h5 class="card-title d-inline">Price:</h5>
+                                <p class="card-text d-inline"> $5</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -97,9 +88,9 @@
 
         <section>
             <div class="d-flex justify-content-center align-items-center  d-sm d-xl-none  ">
-                <div class="card card-body col-6 m-5" style="width: 10rem;">
+                <div class="card card-body col-6 mb-5 ms-2 me-2 rounded-4">
                     <img src="./Imagenes/food_fair.jpg" class="card-img-top rounded-start " alt="Food Fair">
-                    <h5 class="card-title display-6 fw-bold">Festival of the collectivities</h5>
+                    <h5 class="card-title display-6 fw-bold mt-sm-5">Festival of the collectivities</h5>
                     <h5 class="card-title d-inline">Date:</h5>
                     <p class="card-text d-inline"> 2022-12-12</p> <br>
                     <h5 class="card-title d-inline">Description:</h5>
@@ -124,7 +115,7 @@
         </section>
     </main>
 
-    <footer class="mt-5">
+    <footer>
         <div
             class="bg-body-secondary bg-gradient d-flex  justify-content-center justify-content-md-between  align-items-center flex-wrap p-2 ">
             <div class="ms-5  justify-content-center">
@@ -149,7 +140,7 @@
         </div>
 
 
-    </foote>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
