--- a/pastEvents.html
+++ b/pastEvents.html
@@ -8,54 +8,44 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./Css/style.css">
-    <title>Home Page</title>
+    <title>Past Events Page</title>
 </head>
 
 <body>
     <header class="bg-body-secondary">
 
-        <div class="d-flex justify-content-around align-items-center">
+
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <img class="img-fluid pt-2 pb-2 ps-1" src="./Imagenes/amazing_brand.png" alt="Amazing Events">
-            </div>
-
-            <div class="container-fluid d-none d-xl-inline">
-                <nav class="nav nav-pills  fs-5 ">
-                    <a class="flex-sm-fill text-sm-center nav-link  me-2 ms-2 " aria-current="page"
-                        href="./index.html">HOME</a>
-                    <a class="flex-sm-fill text-sm-center nav-link  me-2 ms-2" href="./upcomingEvents.html">UPCOMING
-                        EVENTS</a>
-                    <a class="flex-sm-fill text-sm-center nav-link active me-2 ms-2" href="#">PAST EVENTS</a>
-                    <a class="flex-sm-fill text-sm-center nav-link me-2 ms-2" href="./contact.html">CONTACT</a>
-                    <a class="flex-sm-fill text-sm-center nav-link me-2 ms-2" href="./stats.html">STATS</a>
-
-                </nav>
-            </div>
-
-            <div class="d-flex justify-content-end align-items-center">
-
-                <nav class="navbar d-xl-none d-md-inline d-sm-inline ">
-                    <div class="container-fluid">
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
+                <a class="navbar-brand" href="./index.html">
+                    <img class="img-fluid logo" src="./Imagenes/amazing_brand.png" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar"
+                    aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                        <a class="navbar-brand" href="./index.html">
+                            <img class="img-fluid logo w-75" src="./Imagenes/amazing_brand.png" alt="logo">
+                        </a>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
-                </nav>
-                <div class="collapse" id="navbarToggleExternalContent">
-                    <div class="bg-body-secondary fs-6">
-                        <a class="nav-link  p-2 m-1 text-white text-center rounded-pill " href="./index.html">HOME</a>
-                        <a class="nav-link  p-2 m-1  text-center rounded-pill" href="./upcomingEvents.html">UPCOMING
-                            EVENTS</a>
-                        <a class="nav-link bg-primary p-2 m-1  text-center rounded-pill" href="#">PAST EVENTS</a>
-                        <a class="nav-link  p-2 m-1  text-center rounded-pill" href="./contact.html">CONTACT</a>
-                        <a class="nav-link  p-2 m-1 text-center rounded-pill" href="./stats.html">STATS</a>
-
+                    <div class="offcanvas-body justify-content-end" id="navbarTogglerDemo02">
+                        <a class="p-2 ps-4 pe-4 m-1  rounded-5 fw-bold navbar-brand text-xl-center nav-link"
+                            aria-current="page" href="./index.html">HOME</a>
+                        <a class="p-2 ps-4 pe-4 m-1 text-xl-center nav-link rounded-5 fw-bold navbar-brand"
+                            href="./upcomingEvents.html">UPCOMING EVENTS</a>
+                        <a class="p-2 ps-4 pe-4 m-1 bg-primary text-white text-xl-center nav-link rounded-5 fw-bold navbar-brand"
+                            href="#">PAST EVENTS</a>
+                        <a class="p-2 ps-4 pe-4 m-1 text-xl-center nav-link rounded-5 fw-bold navbar-brand"
+                            href="./contact.html">CONTACT</a>
+                        <a class="p-2 ps-4 pe-4 m-1 text-xl-center nav-link rounded-5 fw-bold navbar-brand"
+                            href="./stats.html">STATS</a>
                     </div>
                 </div>
-            </div>
-        </div>
+        </nav>
 
 
     </header>
@@ -66,42 +56,72 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active div-container">
                         <img src="./Imagenes/optional_banner_2.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption text-center bg-light text-black rounded-5"
-                            style="--bs-bg-opacity: .5;">
-                            <h1 class="display-1">PAST EVENTS</h1>
-                            <p class="fs-4">In this section you will find all your past events</p>
+                        <div class="carousel-caption  div-h1-p d-flex justify-content-center align-items-center">
+                            <div class="text-center bg-light text-black rounded-5 p-3 ps-5 pe-5"
+                                style="--bs-bg-opacity: .7;">
+                                <h1 class="display-1 fw-bold  fst-italic">PAST EVENTS</h1>
+                                <p class="fs-6 d-xl-none fw-bold fst-italic">In this section you will find all your past
+                                    events</p>
+                                <p class="fs-4 d-none d-xl-block fw-bold fst-italic">In this section you will find all
+                                    your past events</p>
+                            </div>
+
                         </div>
                     </div>
                     <div class="carousel-item div-container">
                         <img src="./Imagenes/optional_banner_5.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption text-center bg-light text-black rounded-5"
-                            style="--bs-bg-opacity: .5;">
-                            <h1 class="display-1">PAST EVENTS</h1>
-                            <p class="fs-4">In this section you will find all your past events</p>
+                        <div class="carousel-caption  div-h1-p d-flex justify-content-center align-items-center">
+                            <div class="text-center bg-light text-black rounded-5 p-3 ps-5 pe-5"
+                                style="--bs-bg-opacity: .7;">
+                                <h1 class="display-1 fw-bold  fst-italic">PAST EVENTS</h1>
+                                <p class="fs-6 d-xl-none fw-bold fst-italic">In this section you will find all your past
+                                    events</p>
+                                <p class="fs-4 d-none d-xl-block fw-bold fst-italic">In this section you will find all
+                                    your past events</p>
+                            </div>
+
                         </div>
                     </div>
                     <div class="carousel-item div-container">
                         <img src="./Imagenes/optional_banner_3.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption text-center bg-light text-black rounded-5"
-                            style="--bs-bg-opacity: .5;">
-                            <h1 class="display-1">PAST EVENTS</h1>
-                            <p class="fs-4">In this section you will find all your past events</p>
+                        <div class="carousel-caption  div-h1-p d-flex justify-content-center align-items-center">
+                            <div class="text-center bg-light text-black rounded-5 p-3 ps-5 pe-5"
+                                style="--bs-bg-opacity: .7;">
+                                <h1 class="display-1 fw-bold  fst-italic">PAST EVENTS</h1>
+                                <p class="fs-6 d-xl-none fw-bold fst-italic">In this section you will find all your past
+                                    events</p>
+                                <p class="fs-4 d-none d-xl-block fw-bold fst-italic">In this section you will find all
+                                    your past events</p>
+                            </div>
+
                         </div>
                     </div>
                     <div class="carousel-item div-container">
                         <img src="./Imagenes/optional_banner_1.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption text-center bg-light text-black rounded-5"
-                            style="--bs-bg-opacity: .5;">
-                            <h1 class="display-1">PAST EVENTS</h1>
-                            <p class="fs-4">In this section you will find all your past events</p>
+                        <div class="carousel-caption  div-h1-p d-flex justify-content-center align-items-center">
+                            <div class="text-center bg-light text-black rounded-5 p-3 ps-5 pe-5"
+                                style="--bs-bg-opacity: .7;">
+                                <h1 class="display-1 fw-bold  fst-italic">PAST EVENTS</h1>
+                                <p class="fs-6 d-xl-none fw-bold fst-italic">In this section you will find all your past
+                                    events</p>
+                                <p class="fs-4 d-none d-xl-block fw-bold fst-italic">In this section you will find all
+                                    your past events</p>
+                            </div>
+
                         </div>
                     </div>
                     <div class="carousel-item div-container">
                         <img src="./Imagenes/optional_banner_4.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption text-center bg-light text-black rounded-5"
-                            style="--bs-bg-opacity: .5;">
-                            <h1 class="display-1">PAST EVENTS</h1>
-                            <p class="fs-4">In this section you will find all your past events</p>
+                        <div class="carousel-caption  div-h1-p d-flex justify-content-center align-items-center">
+                            <div class="text-center bg-light text-black rounded-5 p-3 ps-5 pe-5"
+                                style="--bs-bg-opacity: .7;">
+                                <h1 class="display-1 fw-bold  fst-italic">PAST EVENTS</h1>
+                                <p class="fs-6 d-xl-none fw-bold fst-italic">In this section you will find all your past
+                                    events</p>
+                                <p class="fs-4 d-none d-xl-block fw-bold fst-italic">In this section you will find all
+                                    your past events</p>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -271,17 +291,18 @@
     </main>
 
     <footer class="">
-        <div class="bg-body-secondary bg-gradient d-flex  justify-content-center justify-content-md-between  align-items-center flex-wrap p-2 ">
+        <div
+            class="bg-body-secondary bg-gradient d-flex  justify-content-center justify-content-md-between  align-items-center flex-wrap p-2 ">
             <div class="ms-5  justify-content-center">
-                <a  class="ms-2" href="https://wa.link/x9mz02" target="_blank">
+                <a class="ms-2" href="https://wa.link/x9mz02" target="_blank">
                     <img class="img" src="./Imagenes/whatsapp.png" alt="Logo whatsapp">
                 </a>
 
-                <a  href="https://www.facebook.com/" target="_blank">
+                <a href="https://www.facebook.com/" target="_blank">
                     <img class="img" src="./Imagenes/facebook.png" alt="Logo facebook">
                 </a>
 
-                <a  href="https://www.instagram.com/?hl=es-la" target="_blank">
+                <a href="https://www.instagram.com/?hl=es-la" target="_blank">
                     <img class="img" src="./Imagenes/instagram.png" alt="Logo instagram">
                 </a>
             </div>
