--- a/index.html
+++ b/index.html
@@ -196,8 +196,9 @@
 
 
     </footer>
-
-    <script src="./javascript/home.js"></script>
+    <script src="./modulos/variables.js" type="module"></script>
+    <script src="./modulos/funciones.js" type="module"></script>
+    <script src="./javascript/home.js" type="module"></script>
     
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
