--- a/pastEvents.html
+++ b/pastEvents.html
@@ -204,7 +204,9 @@
 
     </footer>
 
-    <script src="./javascript/pastEvents.js"></script>
+    <script src="./modulos/variables.js" type="module"></script>
+    <script src="./modulos/funciones.js" type="module"></script>
+    <script src="./javascript/pastEvents.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
